Release 0.2.6
- [PDF::DAO::Util] setup libpdf at BEGIN time
- Rename or hide overused load() method in various classes/roles
  -- [PDF::DAO] [PDF::DAO::Loader] deprecate load() -> load-delegate()
  -- [PDF::Reader] rename load() -> load-pdf()
  -- [PDF::IO::Crypt] made load() method private

Release 0.2.5
- [PDF::Reader][PDF::Writer]
  -- adjust to PDF::Grammar v0.1.1 shaped cross reference streams.
  -- upgrade index offsets from uint32 to uint64 (for PDF files > 4.2Gb)
  -- don't escape binary characters when writing literal strings
- [PDF::DAO::Util]
  -- add coercements for typed arrays

Release 0.2.4
- [PDF]
  renamed .save-as :update option to :preserve
- Created classes PDF::DAO::Loader and PDF::DAO::Coercer. These
  replace the PDF::DAO::Delegator class.
- [PDF::DAO::Type::Xref]
  streamlined index decoding and encoding
- [PDF::Writer]
  tweak write-real method to match Lib::PDF::Writer.write-real

Release 0.2.3
- [PDF::DAO::Tie]
  -- Simplify method accessors. direct use of AT-KEY, ASSIGN-KEY,
     etc. 20% speed up of test suite run.
- [PDF::DAO::Util]
  -- convert enums to ints in to-ast()
  -- rename sub to-ast-native() -> ast-coerce()
- [PDF::Writer]
  -- use native functions from Lib::PDF::Writer, when available.

Release 0.2.2
- [PDF::Writer] handle ' (MoveShow) and " (MoveSetShow) operators
- [PDF::IO::Handle] Open I/O as :bin 
- Experimental use of Lib::PDF
  -- Speed up the slowest test xt/filter-predictors_bulk.t
  -- Fast packing alternative for PDF::IO::Util
  Optional, and for regression purposes, at this stage. Probably
  wont persue seriously until Rakudo has better JIT.

Release 0.2.1
- Renamed classes PDF::IO to PDF::IO::Util and PDF::IO::Input::*
  to PDF::IO::*.
- Don't cache misses in PDF::DAO::Delegator
- PDF::IO::Filter::Predictors now handles /BitsPerComponent < 8
- Replace PDF::IO::Util resample() with pack(), unpack()

Release 0.2.0
- Renamed class PDF::DAO::Type::PDF to PDF. Restored module name
  to PDF

Release 0.1.1