@@ -6,6 +6,6 @@
 [subrepo]
 	remote = git://github.com/p6-pdf/PDF-p6.git
 	branch = master
-	commit = 9833b5e4f3caf8060180e8a86a336e34bc12dc2a
-	parent = fa247b1dfdda435cfbd0ff05d974dec0ffb6c799
+	commit = 673f58775af2316efb2cf8580a0928e64f2fb10a
+	parent = 7a21dfe5d2ff3e96cbc186c60b82b1241e73fb2f
 	cmdver = 0.4.0
