@@ -13,11 +13,11 @@ sub MAIN (
     Bool :$rebuild    = False,   #= rebuild object tree (renumber, garbage collect and deduplicate objects)
     Bool :$compress   = False,   #= compress streams
     Bool :$uncompress = False,   #= uncompress streams
-    Bool :$zen        = False,   #= require PDF::Zen
+    Bool :$class        = False, #= require PDF::Class
     ) {
 
-    if $zen {
-	require ::('PDF::Zen')
+    if $class {
+	require ::('PDF::Class')
     }
 
     die "conflicting arguments: --compress --uncompress"
